загрузка файлов работает! (выдается некорректное сообщение при загрузке, не удаляются превьюхи и не реализовано сохранение фалов с одинаковыми именами)

--- a/FCGagarin.PL.WebUI/Content/jQuery.FileUpload/css/jquery.fileupload-ui.css
+++ b/FCGagarin.PL.WebUI/Content/jQuery.FileUpload/css/jquery.fileupload-ui.css
@@ -1,4 +1,5 @@
-﻿/*
+@charset "UTF-8";
+/*
  * jQuery File Upload UI Plugin CSS 9.0.0
  * https://github.com/blueimp/jQuery-File-Upload
  *
@@ -15,20 +16,20 @@
 }
 .progress-animated .progress-bar,
 .progress-animated .bar {
-    background: url("../img/progressbar.gif") !important;
-    filter: none;
+  background: url("../img/progressbar.gif") !important;
+  filter: none;
 }
 .fileupload-process {
-    float: right;
-    display: none;
+  float: right;
+  display: none;
 }
 .fileupload-processing .fileupload-process,
 .files .processing .preview {
-    display: block;
-    width: 32px;
-    height: 32px;
-    background: url("../img/loading.gif") center no-repeat;
-    background-size: contain;
+  display: block;
+  width: 32px;
+  height: 32px;
+  background: url("../img/loading.gif") center no-repeat;
+  background-size: contain;
 }
 .files audio,
 .files video {
