кэширование (тупое) + минификсы

--- a/FCGagarin.PL.WebUI/Views/PhotoAlbum/Details.cshtml
+++ b/FCGagarin.PL.WebUI/Views/PhotoAlbum/Details.cshtml
@@ -44,7 +44,7 @@ else
         <a class="next">›</a>
         <a class="close">×</a>
         <a class="play-pause"></a>
-        <ol class="indicator"></ol>
+        @*<ol class="indicator visible-lg"></ol>*@
     </div>
 
     <div id="links">
@@ -65,9 +65,9 @@ else
             }
             else
             {
-                    <div class="h4">
-                        Фото еще нет
-                    </div>
+                <div class="h4">
+                    Фото еще нет
+                </div>
             }
             <!--Your files goes here-->
         </div>
