--- a/FCGagarin.PL.WebUI/Views/Shared/_Files.cshtml
+++ b/FCGagarin.PL.WebUI/Views/Shared/_Files.cshtml
@@ -3,24 +3,42 @@
     <div class="row fileupload-buttonbar">
         <div class="col-lg-9">
             <!-- The fileinput-button span is used to style the file input field as button -->
-            <span class="btn btn-success fileinput-button">
-                <i class="glyphicon glyphicon-plus"></i>
-                <span>Выбрать файлы...</span>
-                <input type="file" name="files[]" multiple>
+            @*<span class="btn btn-success fileinput-button">
+                    <i class="glyphicon glyphicon-plus"></i>
+                    <span>Выбрать файлы...</span>
+                    <input type="file" name="files[]" multiple>
+                </span>*@
+            <span>
+                <span class="btn btn-default fileinput-button">
+                    <i class="fa fa-plus fa-lg"></i>
+                    <input type="file" name="files[]" accept="image/jpg,image/png,image/jpeg,image/gif" multiple>
+                </span>
+                |
+                @*<button type="submit" class="btn btn-primary start">
+                        <i class="glyphicon glyphicon-upload"></i>
+                        <span>Загрузить</span>
+                    </button>*@
+                <button type="submit" class="btn btn-default start">
+                    <i class="fa fa-upload fa-lg"></i>
+                </button>
+                |
+                @*<button type="reset" class="btn btn-warning cancel">
+                        <i class="glyphicon glyphicon-ban-circle"></i>
+                        <span>Отменить загрузку</span>
+                    </button>*@
+                <button type="reset" class="btn btn-default cancel">
+                    <i class="fa fa-ban fa-lg"></i>
+                </button>
+                |
+                @*<button type="button" class="btn btn-danger delete">
+                        <i class="glyphicon glyphicon-trash"></i>
+                        <span>Удалить</span>
+                    </button>*@
+                <button type="button" class="btn btn-default delete">
+                    <i class="fa fa-trash-o fa-lg"></i>
+                </button>
+                <input type="checkbox" class="toggle">
             </span>
-            <button type="submit" class="btn btn-primary start">
-                <i class="glyphicon glyphicon-upload"></i>
-                <span>Загрузить</span>
-            </button>
-            <button type="reset" class="btn btn-warning cancel">
-                <i class="glyphicon glyphicon-ban-circle"></i>
-                <span>Отменить загрузку</span>
-            </button>
-            <button type="button" class="btn btn-danger delete">
-                <i class="glyphicon glyphicon-trash"></i>
-                <span>Удалить</span>
-            </button>
-            <input type="checkbox" class="toggle">
             <!-- The global file processing state -->
             <span class="fileupload-process"></span>
         </div>
@@ -33,19 +51,19 @@
             <!-- The extended global progress state -->
             <div class="progress-extended">&nbsp;</div>
         </div>
-   </div>
-    <!-- The global progress state -->
-    <div class="col-lg-3 fileupload-progress fade">
-        <!-- The global progress bar -->
-        <div class="progress progress-striped active" role="progressbar" aria-valuemin="0" aria-valuemax="100">
-            <div class="progress-bar progress-bar-success" style="width:0%;"></div>
-        </div>
-        <!-- The extended global progress state -->
-        <div class="progress-extended">&nbsp;</div>
     </div>
-    
+    <!-- The global progress state -->
+    @*<div class="col-lg-3 fileupload-progress fade">
+            <!-- The global progress bar -->
+            <div class="progress progress-striped active" role="progressbar" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar progress-bar-success" style="width:0%;"></div>
+            </div>
+            <!-- The extended global progress state -->
+            <div class="progress-extended">&nbsp;</div>
+        </div>*@
+
     <!-- The table listing the files available for upload/download -->
-    <table role="presentation" class="table table-striped"><tbody class="files"></tbody></table>
+    <table role="presentation" class="table table-striped table-responsive"><tbody class="files"></table>
 </form>
 
 <br>
@@ -57,7 +75,7 @@
     <a class="next">›</a>
     <a class="close">×</a>
     <a class="play-pause"></a>
-    <ol class="indicator"></ol>
+    @*<ol class="indicator"></ol>*@
 </div>
 <!-- The template to display files available for upload -->
 <script id="template-upload" type="text/x-tmpl">
@@ -76,15 +94,23 @@
         </td>
         <td>
             {% if (!i && !o.options.autoUpload) { %}
-            <button class="btn btn-primary start" disabled>
-                <i class="glyphicon glyphicon-upload"></i>
-                <span>Start</span>
+
+            @*<button class="btn btn-primary start" disabled>
+                    <i class="glyphicon glyphicon-upload"></i>
+                    <span>Start</span>
+                </button>*@
+            <button class="btn btn-default start" disabled>
+                <i class="fa fa-upload fa-lg"></i>
             </button>
             {% } %}
             {% if (!i) { %}
-            <button class="btn btn-warning cancel">
-                <i class="glyphicon glyphicon-ban-circle"></i>
-                <span>Cancel</span>
+            @*<button class="btn btn-warning cancel">
+                    <i class="glyphicon glyphicon-ban-circle"></i>
+                    <span>Cancel</span>
+                </button>*@
+            <span>|</span>
+            <button class="btn btn-default cancel">
+                <i class="fa fa-ban fa-lg"></i>
             </button>
             {% } %}
         </td>
@@ -119,15 +145,21 @@
         </td>
         <td>
             {% if (file.DeleteUrl) { %}
-            <button class="btn btn-danger delete" data-type="{%=file.DeleteType%}" data-url="{%=file.DeleteUrl%}" {% if (file.deletewithcredentials) { %} data-xhr-fields='{"withCredentials":true}' {% } %}>
-                <i class="glyphicon glyphicon-trash"></i>
-                <span>Delete</span>
+            @*<button class="btn btn-danger delete" data-type="{%=file.DeleteType%}" data-url="{%=file.DeleteUrl%}" {% if (file.deletewithcredentials) { %} data-xhr-fields='{"withCredentials":true}' {% } %}>
+                    <i class="glyphicon glyphicon-trash"></i>
+                    <span>Delete</span>
+                </button>*@
+            <button class="btn btn-default delete" data-type="{%=file.DeleteType%}" data-url="{%=file.DeleteUrl%}" {% if (file.deletewithcredentials) { %} data-xhr-fields='{"withCredentials":true}' {% } %}>
+                <i class="fa fa-trash-o fa-lg"></i>
             </button>
             <input type="checkbox" name="delete" value="1" class="toggle">
             {% } else { %}
-            <button class="btn btn-warning cancel">
-                <i class="glyphicon glyphicon-ban-circle"></i>
-                <span>Cancel</span>
+            @*<button class="btn btn-warning cancel">
+                    <i class="glyphicon glyphicon-ban-circle"></i>
+                    <span>Cancel</span>
+                </button>*@
+            <button class="btn btn-default cancel">
+                <i class="fa fa-ban fa-lg"></i>
             </button>
             {% } %}
         </td>
